--- a/sandbox/gamedev/index.yml
+++ b/sandbox/gamedev/index.yml
@@ -43,11 +43,6 @@ sections:
       href: unity/azure-mobile-apps-unity
       image:
         src: media/unity.png
-    - title: NuGet2Unity
-      html: <p>Utility to create Unity packages from NuGet</p>
-      href: unity/nuget2Unity
-      image:
-        src: media/unity.png
     - title: Azure SDKs for MonoGame
       html: <p>Use the Azure SDKs with MonoGame</p>
       href: monogame/azure-monogame
@@ -87,3 +82,10 @@ sections:
       href: azure-gaming-samples.md
       image:
         src: https://docs.microsoft.com/media/common/i_code-samples.svg
+- title: Tools and Utilities
+  items:
+  - title: NuGet2Unity
+    html: <p>Utility to create Unity packages from NuGet</p>
+    href: unity/nuget2unity
+    image:
+      src: media/unity.png
